--- a/frontend/public/pages/inventory.html
+++ b/frontend/public/pages/inventory.html
@@ -43,6 +43,13 @@
         <!-- lignes dynamiques ici -->
       </tbody>
     </table>
+    <!-- Spinner overlay uniquement sur le tableau -->
+    <div id="table-spinner" style="display:none;">
+      <div style="text-align:center">
+        <div class="loader"></div>
+        <div style="margin-top:8px;color:white;font-weight:bold;">Upload en cours…</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
