--- a/frontend/public/pages/reservable_modal.html
+++ b/frontend/public/pages/reservable_modal.html
@@ -20,6 +20,11 @@
           Nom :
           <input type="text" id="rsb-res-name" class="rsb-input" />
         </label>
+        <!-- Matricule -->
+        <label class="rsb-label">
+          Nom :
+          <input type="text" id="rsb-res-serial_id" class="rsb-input" />
+        </label>
 
         <!-- Statut -->
         <label class="rsb-label">
@@ -116,6 +121,10 @@
             <!-- Les options seront remplies dynamiquement avec allStyles -->
           </select>
         </div>
+        
+        <!-- Couleurs (grille) -->
+        <label class="rsb-label rsb-full-width">Couleurs :</label>
+        <div id="rsb-grid-colors" class="rsb-grid-colors rsb-full-width"></div>
 
 
       </div> <!-- grid -->
