--- a/frontend/public/pages/reservable_modal.html
+++ b/frontend/public/pages/reservable_modal.html
@@ -22,8 +22,8 @@
         </label>
         <!-- Matricule -->
         <label class="rsb-label">
-          Nom :
-          <input type="text" id="rsb-res-serial_id" class="rsb-input" />
+          Matricule :
+          <input type="text" id="rsb-res-serial_id" class="rsb-input" placeholder="identifiant (optionnel)" />
         </label>
 
         <!-- Statut -->
