--- a/frontend/public/pages/collection.html
+++ b/frontend/public/pages/collection.html
@@ -34,6 +34,12 @@
         <div class="filter-chip" data-gender="unisex">Unisexe</div>
       </div>
     </div>
+    
+    <!-- Nouvelle section Couleur -->
+     <div class="filter-section">
+       <div><strong>Couleurs</strong></div>
+       <div id="cstm-colorChips" class="cstm-chip-list"></div>
+     </div>
 
     <hr class="cstm-divider">
 
